Add flags to support Java 25 compatibility
Should be backward compatible with older JVMs due to allowing unrecognised args