@@ -43,16 +43,19 @@ class InstallerTypeServer implements InstallerType {
   }
 
   @Override
-  List<String> getJvmModuleOpensArgs() {
+  List<String> getJvmInternalAccessArgs() {
     [
-      '--add-opens=java.base/java.lang=ALL-UNNAMED', // Required for Hibernate 3.6/Javassist proxyinh, ConsoleResult exception smudging, GoConfigGraphWalker (at minimum, may be used for other things)
+      '--add-opens=java.base/java.lang=ALL-UNNAMED', // Required for Hibernate 3.6/Javassist proxying, ConsoleResult exception smudging, GoConfigGraphWalker (at minimum, may be used for other things)
       '--add-opens=java.base/java.util=ALL-UNNAMED', // Required at least for cloning GoConfig subclasses of java.util classes :(
+      '--enable-native-access=ALL-UNNAMED',          // JDK 25+: Needed by com.kenai.jffi.internal.StubLoader at least
+      '--sun-misc-unsafe-memory-access=allow',       // JDK 25+: sun.misc.Unsafe needed by Felix SecureAction, object cloning and probably others
+      '-XX:+IgnoreUnrecognizedVMOptions',            // JDK <25: Allow use of --sun-misc-unsafe-memory-access on older JVMs without errors
     ]
   }
 
   @Override
   List<String> getJvmArgs() {
-    getJvmModuleOpensArgs() + [
+    getJvmInternalAccessArgs() + [
       '-Xms512m',
       '-Xmx1024m',
       '-XX:MaxMetaspaceSize=400m',
